chore: fix eventcatalog compiler settings
update caffeine library to v3.2.1